--- a/api-client/index.html
+++ b/api-client/index.html
@@ -64,6 +64,7 @@
                                 <th>book description</th>
                                 <th>book stock</th>
                                 <th>book price</th>
+                                <th>author</th>
                             </tr>
                         </thead>
                         
@@ -171,7 +172,7 @@
 
 
 
-<button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">Launch demo modal</button>
+<button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal" id="viewAuthorsButton">View Authors</button>
 <!-- Modal -->
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
     <div class="modal-dialog">
