done, login fixed, tidied up

--- a/api-client/index.html
+++ b/api-client/index.html
@@ -6,7 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./css/style.css">
-
+	<link href="data:image/x-icon;base64,AAABAAEAEA4AAAEAIADgAwAAFgAAACgAAAAQAAAAHAAAAAEAIAAAAAAAAAAAAAAAAAAAAAAAAAAA
+    AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+    AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAFEM0RZVAOMJAAAAAAAAAAAA
+    AAAAAAAAAAAAAAAAAAAAAAAAAAAAAABJANsHAAAAAAAAAAAAAAAAAAAAAAAAAABWDderVg7W+FYO
+    16pXDdVPZgDMBQAAAAAAAAAAAAAAAAAAAABVDdROVg7X6VIS0RwAAAAAAAAAAAAAAABWENhBVg7W
+    /1YO1v9WDtb/Vg7W/1YO1upWD9aJWBLTHQAAAAAAAAAAVQvXLVYO1v9XD9acAAAAAAAAAAAAAAAA
+    VQ3WUVYO1v9WDtb/Vg7W/1YO1vFWDtb/Vg7W/1YO1vpWDtaVWxLbDgAAAABWDtfKVg7W/lcO1VsA
+    AAAAAAAAAFcO1aVWDtb/Vg7W/1YO1v9WDtZ8Vw/VVVUO1stWDtb/Vg7W/1YP1sAAAAAAVg/VVlYO
+    1v9WDtb1Vw/WnFYO1kpWDtbtVg/W9lcO1ZNWDtb/Vg7W91cO1qJWDteSVg/W5FYO1v9WDtexAAAA
+    AFUA/wNWDtbYVg7W/1YO1v9WDtb/Vg7W/1YO1t5YEtMdVg7W2FYO1v9WDtb/Vg7W/1YO1v9WDtb4
+    WA7VNwAAAAAAAAAAVg7XWVYO1v9WDtb8Vw7Vk1YO1u5WDtb/Vg7W81UN1q1WDtb9Vg7W/1YO1udW
+    Dtb4Vg7W/1YO1v4AAAAAAAAAAFUJ2RtWDtb3Vg7W/1cO1W1VEd0PVg/WiVYO1vxWDtb/Vg7W/1YO
+    1v9WDtbnVg7WSlYP1q9WDtb/AAAAAAAAAABWDtW4Vg7W/1YO1v9WD9b2Vg7Ww1YO1rpWDtb1Vg7W
+    /1YO1v9WDtb/Vg7W/1YO1vtWDtbmVw7VpQAAAAAAAAAAVQ7VElUN1nVXDtbaVg7W+FYO1v5WDtbv
+    Vg/WwVcO1UkAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+    AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+    AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAP//AAD+fwAAvg8A
+    ABwDAAAcAAAAjAAAAIAAAACAAAAAwAAAAMAAAADAAAAAwD8AAP//AAD//wAA" rel="icon" type="image/x-icon" /> <!--What can I say, my favicon didn't wanna work locally-->
     <link rel="stylesheet" href="./font/css/open-iconic-bootstrap.min.css">
     <title>RESTful Books</title>
 </head>
